# barista

./: BUILD.bazel  WORKSPACE  angular.json  bazelify.js  nx.json  package-lock.json  package.json  test.js  tsconfig.base.json
.buildkite/: build.sh  pipeline.yml  test.py  test.sh
.buildkite/hooks/: environment  post-checkout  pre-command
.github/workflows/: design-tokens-ui.yml
apps/figma-design-tokens/: BUILD.bazel  README.md  rollup.config.js
apps/figma-design-tokens/src/: environment.ts  ui.ts
apps/figma-design-tokens/src/components/: loading-spinner.ts  metadata-upload-confirm.ts
apps/fluid-dev/src/pages/button-group/: button-group-page.component.html
libs/barista-components/: config.bzl
libs/barista-components/consumption/: BUILD.bazel
libs/barista-components/datepicker/src/: calendar-body.ts  datepicker.ts  timeinput.html  timeinput.scss  timepicker.html  timepicker.scss  timepicker.ts
libs/fluid-elements/design-system-provider/: BUILD.bazel
tools/bazel_rules/figma_plugin/: BUILD.bazel
tools/bazel_rules/rollup/: rollup.bzl
tools/bazel_rules/stylelint/: run-stylelint.ts
tools/scripts/utils/: execute-bazel.js
